fix the broken integ and a11y tests. Correct the font and color of labelTag

--- a/src/button-dropdown/item-element/styles.scss
+++ b/src/button-dropdown/item-element/styles.scss
@@ -121,8 +121,7 @@
 }
 
 .label-tag {
-  font-weight: styles.$font-weight-lighter;
-  color: awsui.$color-text-dropdown-item-secondary;
+  color: awsui.$color-text-body-default;
 }
 
 .secondary-text {
